<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/calendar_header"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:background="@drawable/calendar_header"
        android:layout_alignParentTop="true"
        >

        <Button
            android:id="@+id/calendar_prev_button"
            android:layout_width="75dp"
            android:layout_height="35dp"
            android:gravity="center|center_vertical"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            style="@android:style/Widget.DeviceDefault.Light.Button.Small"/>

        <TextView
            android:id="@+id/calendar_title"
            android:gravity="center"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"/>

        <Button
            android:id="@+id/calendar_next_button"
            android:layout_width="75dp"
            android:layout_height="35dp"
            android:gravity="center|center_vertical"
            android:layout_alignTop="@+id/calendar_prev_button"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            style="@android:style/Widget.DeviceDefault.Light.Button.Small"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/calendar_title">

            <TextView
                android:id="@+id/sunday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sunday"
                android:gravity="center|center_horizontal"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/monday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/monday"
                android:gravity="center|center_horizontal"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/tuesday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tuesday"
                android:gravity="center|center_horizontal"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/wednesday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wednesday"
                android:gravity="center|center_horizontal"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/thursday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/thursday"
                android:gravity="center|center_horizontal"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/friday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/friday"
                android:gravity="center|center_horizontal"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/saturday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/saturday"
                android:gravity="center|center_horizontal"
                android:layout_weight="1"/>
       </LinearLayout>
        </RelativeLayout>

    <GridView xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/gridview"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingLeft=".1dp"
              android:numColumns="7"
              android:verticalSpacing="0dp"
              android:horizontalSpacing="0dp"
              android:gravity="center"
              android:stretchMode="columnWidth"
              android:layout_below="@+id/calendar_header"
              android:layout_alignParentLeft="true"
              android:layout_alignParentStart="true"/>

</RelativeLayout>

